feat: ability to delete all notes
