# app/docs/swagger.yaml
@@ -309,6 +309,31 @@ info:
   title: Org Note API
   version: 0.0.1
 paths:
+  /all-notes:
+    delete:
+      consumes:
+      - application/json
+      description: Force delete all user notes. This operation is irreversible
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.HttpError-any'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.HttpError-any'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.HttpError-any'
+      summary: Drop all user notes
+      tags:
+      - notes
   /auth/{provider}/callback:
     get:
       consumes:
